Colores de fondo a los elementos de listas

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,97 +15,69 @@
 
         <h2>Títulos, párrafos, saltos de línea</h2>
 
-        <div class="list-group mb-3">
-            <a href="conceptos_basicos/monos.html" title="Curiosidades sobre los monos" class="list-group-item list-group-item-action">Monos</a>
-            <a href="conceptos_basicos/langostinos.html" title="Poesía sobre langostinos" class="list-group-item list-group-item-action">Langostinos</a>
-            <a href="conceptos_basicos/coches.html" title="Dibujos de coches hechos con ASCII Art" class="list-group-item list-group-item-action">Coches</a>
-            <a href="conceptos_basicos/naturaleza.html" title="ASCII Art de naturaleza" class="list-group-item list-group-item-action">Naturaleza</a>
+        <div class="list-group mb-3 border border-primary">
+            <a href="conceptos_basicos/monos.html" title="Curiosidades sobre los monos" class="list-group-item list-group-item-action list-group-item-primary">Monos</a>
+            <a href="conceptos_basicos/langostinos.html" title="Poesía sobre langostinos" class="list-group-item list-group-item-action list-group-item-primary">Langostinos</a>
+            <a href="conceptos_basicos/coches.html" title="Dibujos de coches hechos con ASCII Art" class="list-group-item list-group-item-action list-group-item-primary">Coches</a>
+            <a href="conceptos_basicos/naturaleza.html" title="ASCII Art de naturaleza" class="list-group-item list-group-item-action list-group-item-primary">Naturaleza</a>
         </div>
         
         <h2>Formato de texto</h2>
 
-        <div class="list-group mb-3">
-            <a href="formato_texto/el_senyor_de_los_anillos.html" title="Extracto de una de las película del Señor de los Anillos" class="list-group-item list-group-item-action">El Señor de los Anillos</a>
-            <a href="formato_texto/volumenes.html" title="Fórmulas pra el cálculo de volúmenes" class="list-group-item list-group-item-action">Volúmenes</a>
-            <a href="formato_texto/ofertas_mochilas.html" title="Ofertas de mnochilas black friday 2024" class="list-group-item list-group-item-action">Ofertas mochilas</a>
+        <div class="list-group mb-3 border border-success">
+            <a href="formato_texto/el_senyor_de_los_anillos.html" title="Extracto de una de las película del Señor de los Anillos" class="list-group-item list-group-item-action list-group-item-success">El Señor de los Anillos</a>
+            <a href="formato_texto/volumenes.html" title="Fórmulas pra el cálculo de volúmenes" class="list-group-item list-group-item-action  list-group-item-success">Volúmenes</a>
+            <a href="formato_texto/ofertas_mochilas.html" title="Ofertas de mnochilas black friday 2024" class="list-group-item list-group-item-action list-group-item-success">Ofertas mochilas</a>
         </div>
 
         <h2>Enlaces y listas</h2>
 
-        <ul>
-            <li>
-                <a href="enlaces/la_comunidad_del_anillo.html">La Comunidad del Anillo</a>
-            </li>
-            <li>
-                <a href="index_listas_tradicionales.html">Índice con listas tradicionales</a>
-            </li>
-        </ul>
+        <div class="list-group mb-3 border border-warning">
+            <a href="enlaces/la_comunidad_del_anillo.html" class="list-group-item list-group-item-action list-group-item-warning">La Comunidad del Anillo</a>
+            <a href="index_listas_tradicionales.html" class="list-group-item list-group-item-action list-group-item-warning">Índice con listas tradicionales</a>
+        </div>
 
         <h2>Formularios</h2>
 
-        <ul>
-            <li>
-                <a href="formularios/login.html">Login</a>
-            </li>
-            <li>
-                <a href="formularios/reserva_cita.html">Reserva de cita</a>
-            </li>
-            <li>
-                <a href="formularios/solicitud_oferta_laboral.html">Solicitud de oferta laboral (con Bootstrap)</a>
-            </li>
-            <li>
-                <a href="formularios/google.html">Página de inicio de Google</a>
-            </li>
-        </ul>
+        <div class="list-group mb-3 border border-info">
+            <a href="formularios/login.html" class="list-group-item list-group-item-action list-group-item-info">Login</a>
+            <a href="formularios/reserva_cita.html" class="list-group-item list-group-item-action list-group-item-info">Reserva de cita</a>
+            <a href="formularios/solicitud_oferta_laboral.html" class="list-group-item list-group-item-action list-group-item-info">Solicitud de oferta laboral (con Bootstrap)</a>
+            <a href="formularios/google.html" class="list-group-item list-group-item-action list-group-item-info">Página de inicio de Google</a>
+        </div>
 
         <h2>Tablas</h2>
 
-        <ul>
-            <li>
-                <a href="tablas/protectora_de_ibi.html">Protectora de Ibi</a>
-            </li>
-        </ul>
+        <div class="list-group mb-3 border border-danger">
+            <a href="tablas/protectora_de_ibi.html" class="list-group-item list-group-item-action list-group-item-danger">Protectora de Ibi</a>
+        </div>
 
         <h2>Temas (más info <a href="https://bootswatch.com/">aquí</a> y enlaces CDN <a href="https://cdnjs.com/libraries/bootswatch">aquí</a>)</h2>
 
-        <ul>
-            <li>
-                <a href="tablas/protectora_de_ibi_con_bootswatch_tema_quartz.html">Protectora de Ibi con Bootswatch estilo Quartz</a>
-            </li>
-            <li>
-                <a href="tablas/protectora_de_ibi_con_bootswatch_tema_superhero.html">Protectora de Ibi con Bootswatch estilo Superhero</a>
-            </li>
-            <li>
-                <a href="tablas/protectora_de_ibi_con_bootswatch_tema_vapor.html">Protectora de Ibi con Bootswatch estilo Vapor</a>
-            </li>
-            <li>
-                <a href="tablas/protectora_de_ibi_con_bootswatch_tema_sketchy.html">Protectora de Ibi con Bootswatch estilo Sketchy</a>
-            </li>
-        </ul>
+        <div class="list-group mb-3 border border-secondary">
+            <a href="tablas/protectora_de_ibi_con_bootswatch_tema_quartz.html" class="list-group-item list-group-item-action list-group-item-secondary">Protectora de Ibi con Bootswatch estilo Quartz</a>
+            <a href="tablas/protectora_de_ibi_con_bootswatch_tema_superhero.html" class="list-group-item list-group-item-action list-group-item-secondary">Protectora de Ibi con Bootswatch estilo Superhero</a>
+            <a href="tablas/protectora_de_ibi_con_bootswatch_tema_vapor.html" class="list-group-item list-group-item-action list-group-item-secondary">Protectora de Ibi con Bootswatch estilo Vapor</a>
+            <a href="tablas/protectora_de_ibi_con_bootswatch_tema_sketchy.html" class="list-group-item list-group-item-action list-group-item-secondary">Protectora de Ibi con Bootswatch estilo Sketchy</a>
+        </div>
 
         <h2>Selector de Temas</h2>
 
-        <ul>
-            <li>
-                <a href="tablas/protectora_de_ibi_con_bootstrap.html">Protectora de Ibi con selector de temas de Bootswatch</a>
-            </li>
-        </ul>
+        <div class="list-group mb-3 border border-warning">
+            <a href="tablas/protectora_de_ibi_con_bootstrap.html" class="list-group-item list-group-item-action list-group-item-warning">Protectora de Ibi con selector de temas de Bootswatch</a>
+        </div>
 
         <h2>Bootstrap personalizado (Más información <a href="https://bootstrap.build/app">aquí</a>)</h2>
 
-        <ul>
-            <li>
-                <a href="fuentes_texto/tema_personalizado.html">Tema personalizado</a>
-            </li>
-        </ul>
+        <div class="list-group mb-3 border border-primary">
+            <a href="fuentes_texto/tema_personalizado.html" class="list-group-item list-group-item-action list-group-item-primary">Tema personalizado</a>
+        </div>
 
         <h2>Fuentes de letra y estilos de texto</h2>
 
-        <ul>
-            <li>
-                <a href="fuentes_texto/videos_interesantes.html">Vídeos interesantes</a>
-            </li>
-        </ul>
+        <div class="list-group mb-3 border border-success">
+            <a href="fuentes_texto/videos_interesantes.html" class="list-group-item list-group-item-action list-group-item-success">Vídeos interesantes</a>
+        </div>
     </div>
 </body>
 
