Selector de temas en el index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,6 +13,39 @@
     <div class="container">
         <h1>Prácticas de HTML</h1>
 
+        <select id="selector-claro-oscuro" class="form-select mb-2">
+            <option value="dark" selected>Tema oscuro (Predeterminado)</option>
+            <option value="light">Tema claro</option>
+        </select>
+
+        <select id="selector-tema" class="form-select mb-2">
+            <option value="bootstrap" selected>Bootstrap (Predeterminado)</option>
+            <option value="cerulean">Cerulean</option>
+            <option value="cosmo">Cosmo</option>
+            <option value="cyborg">Cyborg</option>
+            <option value="darkly">Darkly</option>
+            <option value="flatly">Flatly</option>
+            <option value="journal">Journal</option>
+            <option value="litera">Litera</option>
+            <option value="lumen">Lumen</option>
+            <option value="lux">Lux</option>
+            <option value="minty">Minty</option>
+            <option value="morph">Morph</option>
+            <option value="pulse">Pulse</option>
+            <option value="quartz">Quartz</option>
+            <option value="sandstone">Sandstone</option>
+            <option value="simplex">Simplex</option>
+            <option value="sketchy">Sketchy</option>
+            <option value="slate">Slate</option>
+            <option value="solar">Solar</option>
+            <option value="spacelab">Spacelab</option>
+            <option value="superhero">Superhero</option>
+            <option value="united">United</option>
+            <option value="vapor">Vapor</option>
+            <option value="yeti">Yeti</option>
+            <option value="zephyr">Zephyr</option>
+        </select>        
+
         <h2>Títulos, párrafos, saltos de línea</h2>
 
         <div class="list-group mb-3 border border-primary">
@@ -79,6 +112,8 @@
             <a href="fuentes_texto/videos_interesantes.html" class="list-group-item list-group-item-action list-group-item-success">Vídeos interesantes</a>
         </div>
     </div>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
