--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width">
     <title>HTML</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link id="enlace-tema" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <h1>Prácticas de HTML</h1>
 
-        <select id="selector-claro-oscuro" class="form-select mb-2">
+        <select id="selector-claro-oscuro" class="form-select mb-2 border border-warning">
             <option value="dark" selected>Tema oscuro (Predeterminado)</option>
             <option value="light">Tema claro</option>
         </select>
 
-        <select id="selector-tema" class="form-select mb-2">
+        <select id="selector-tema" class="form-select mb-2 border border-warning">
             <option value="bootstrap" selected>Bootstrap (Predeterminado)</option>
             <option value="cerulean">Cerulean</option>
             <option value="cosmo">Cosmo</option>
