--- a/HTML/sombras/tienda_videojuegos.html
+++ b/HTML/sombras/tienda_videojuegos.html
@@ -8,28 +8,28 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Honk&family=Kalnia+Glaze:wght@100..700&family=Marcellus&family=Marcellus+SC&family=Nabla&family=Sixtyfour+Convergence&family=Slackey&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Freckle+Face&family=Honk&family=Kalnia+Glaze:wght@100..700&family=Marcellus&family=Marcellus+SC&family=Nabla&family=Sixtyfour+Convergence&family=Slackey&display=swap" rel="stylesheet">
 
     <link href="estilos.css" rel="stylesheet">
   </head>
-  <body data-bs-theme="dark">
+  <body data-bs-theme="dark" class="text-center">
     <div class="container">
-        <h1 class="titulo1">Tienda de videojuegos</h1>
+        <h1 class="titulo1 mb-3">Tienda de videojuegos</h1>
 
         <h2 class="titulo2">Nuevo lanzamiento de shooter en primera persona</h2>
 
-        <div class="container caja-miniaturas">
+        <div class="container caja-miniaturas my-3">
           <div class="row row-cols-4">
-            <div class="col p-1"><img src="shooter1.webp" class="img-fluid"></div>
-            <div class="col p-1"><img src="shooter2.webp" class="img-fluid"></div>
-            <div class="col p-1"><img src="shooter3.webp" class="img-fluid"></div>
-            <div class="col p-1"><img src="shooter4.webp" class="img-fluid"></div>
+            <div class="col p-0"><img src="shooter1.webp" class="img-fluid border border-warning"></div>
+            <div class="col p-0"><img src="shooter2.webp" class="img-fluid border border-danger"></div>
+            <div class="col p-0"><img src="shooter3.webp" class="img-fluid border border-success"></div>
+            <div class="col p-0"><img src="shooter4.webp" class="img-fluid border border-primary"></div>
           </div>
         </div>
 
         <h2 class="titulo2">Otros videojuegos</h2>
 
-        <div id="carouselExampleIndicators" class="carousel slide mb-5 caja-carrusel" data-bs-interval="3000" data-bs-ride="carousel" >
+        <div id="carouselExampleIndicators" class="carousel slide my-3 border border-danger caja-carrusel" data-bs-interval="3000" data-bs-ride="carousel" >
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
