--- a/HTML/sombras/tienda_videojuegos.html
+++ b/HTML/sombras/tienda_videojuegos.html
@@ -14,50 +14,54 @@
   </head>
   <body data-bs-theme="dark" class="text-center">
     <div class="container">
-        <h1 class="titulo1 mb-3">Tienda de videojuegos</h1>
+      <h1 class="titulo1 mb-3">Tienda de videojuegos</h1>
 
-        <h2 class="titulo2">Nuevo lanzamiento de shooter en primera persona</h2>
+      <h2 class="titulo2">Nuevo lanzamiento de shooter en primera persona</h2>
 
-        <div class="container caja-miniaturas my-3">
-          <div class="row row-cols-4">
-            <div class="col p-0"><img src="shooter1.webp" class="img-fluid border border-warning"></div>
-            <div class="col p-0"><img src="shooter2.webp" class="img-fluid border border-danger"></div>
-            <div class="col p-0"><img src="shooter3.webp" class="img-fluid border border-success"></div>
-            <div class="col p-0"><img src="shooter4.webp" class="img-fluid border border-primary"></div>
+      <div class="container caja-miniaturas my-3">
+        <div class="row row-cols-4">
+          <div class="col p-0"><img src="shooter1.webp" class="img-fluid border border-warning"></div>
+          <div class="col p-0"><img src="shooter2.webp" class="img-fluid border border-danger"></div>
+          <div class="col p-0"><img src="shooter3.webp" class="img-fluid border border-success"></div>
+          <div class="col p-0"><img src="shooter4.webp" class="img-fluid border border-primary"></div>
+        </div>
+      </div>
+
+      <h2 class="titulo2">Otros videojuegos</h2>
+
+      <div id="carouselExampleIndicators" class="carousel slide my-3 border border-danger caja-carrusel" data-bs-interval="3000" data-bs-ride="carousel" >
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="shooter5.webp" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="shooter6.webp" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="shooter7.webp" class="d-block w-100">
           </div>
         </div>
-
-        <h2 class="titulo2">Otros videojuegos</h2>
-
-        <div id="carouselExampleIndicators" class="carousel slide my-3 border border-danger caja-carrusel" data-bs-interval="3000" data-bs-ride="carousel" >
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="shooter5.webp" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-              <img src="shooter6.webp" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-              <img src="shooter7.webp" class="d-block w-100">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-
-
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
+
+    <h2 class="titulo2">Más información en</h2>
+
+    <p>
+      <a class="enlace mb-3" href="https://store.steampowered.com/?l=spanish">Steam</a>
+    </p>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
