--- a/HTML/sombras/tienda_videojuegos.html
+++ b/HTML/sombras/tienda_videojuegos.html
@@ -14,7 +14,7 @@
   </head>
   <body data-bs-theme="dark" class="text-center">
     <div class="container">
-      <h1 class="titulo1 mb-3">Tienda de videojuegos</h1>
+      <h1 class="titulo1 my-3">Tienda de videojuegos</h1>
 
       <h2 class="titulo2">Nuevo lanzamiento de shooter en primera persona</h2>
 
@@ -24,6 +24,23 @@
           <div class="col p-0"><img src="shooter2.webp" class="img-fluid border border-danger"></div>
           <div class="col p-0"><img src="shooter3.webp" class="img-fluid border border-success"></div>
           <div class="col p-0"><img src="shooter4.webp" class="img-fluid border border-primary"></div>
+        </div>
+      </div>
+
+      <h2 class="titulo2">LOFI: ¡Nuevo lanzamiento de juego de aventuras!</h2>
+
+      <div class="card my-3 caja-card">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="aventuras1.png" class="h-100 w-100 rounded">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">LOFI</h5>
+              <p class="card-text">LOFI es el mejor juego de aventuras de todos los tiempos.</p>
+              <p class="card-text"><small class="text-body-secondary">Disponible próximamente</small></p>
+            </div>
+          </div>
         </div>
       </div>
 
