Pequeños ajustes y añadido enlace offcanvas

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -106,10 +106,12 @@
             <a href="fuentes_texto/tema_personalizado.html" class="list-group-item list-group-item-action list-group-item-primary">Tema personalizado</a>
         </div>
 
-        <h2>Fuentes de letra y estilos de texto</h2>
+        <h2>Miscelánea (fuentes de letra, sombras, cards, carrusel, etc.)</h2>
 
         <div class="list-group mb-3 border border-success">
             <a href="fuentes_texto/videos_interesantes.html" class="list-group-item list-group-item-action list-group-item-success">Vídeos interesantes</a>
+            <a href="sombras/tienda_videojuegos.html" class="list-group-item list-group-item-action list-group-item-success">Tienda de videojuegos</a>
+            <a href="offcanvas/offcanvas.html" class="list-group-item list-group-item-action list-group-item-success">Offcanvas</a>
         </div>
     </div>
 
