--- a/HTML/sombras/tienda_videojuegos.html
+++ b/HTML/sombras/tienda_videojuegos.html
@@ -29,10 +29,10 @@
 
       <h2 class="titulo2">LOFI: ¡Nuevo lanzamiento de juego de aventuras!</h2>
 
-      <div class="card my-3 caja-card">
+      <div class="card my-3 caja-card border-success">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="aventuras1.png" class="h-100 w-100 rounded">
+            <img src="aventuras1.png" class="h-100 w-100 rounded border border-success">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -76,8 +76,8 @@
 
     <h2 class="titulo2">Más información en</h2>
 
-    <p>
-      <a class="enlace mb-3" href="https://store.steampowered.com/?l=spanish">Steam</a>
+    <p class="mb-5">
+      <a class="enlace" href="https://store.steampowered.com/?l=spanish">Steam</a>
     </p>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
