--- a/JavaScript/Ejercicios/ejercicios de clase/8.dom.html
+++ b/JavaScript/Ejercicios/ejercicios de clase/8.dom.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <script src="8.dom.js"></script>
+    <script src="8.dom.js" defer></script>
 </head>
 <body>
     <p><img src="img/img1.webp" id="imagen" alt=""></p>
-    <p><button class="btn btn-danger">Click me</button></p>
+    <p><button class="btn btn-danger" id="boton">Click me</button></p>
 </body>
 </html>
