--- a/JavaScript/Ejercicios/ejercicios de clase/9.formularios.html
+++ b/JavaScript/Ejercicios/ejercicios de clase/9.formularios.html
@@ -15,6 +15,7 @@
           <option value="finalizada">Finalizada</option>
         </select>
       </p>
+      <p><button type="submit">Añadir</button></p>
     </form>
     <ul id="listaTareas"></ul>
   </body>
