--- a/JavaScript/Ejercicios/ejercicios de clase/9.formularios.html
+++ b/JavaScript/Ejercicios/ejercicios de clase/9.formularios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="9.formularios.js"></script>
+    <script src="9.formularios.js" defer></script>
   </head>
   <body>
     <form id="formTareas">
