--- a/HTML/index.html
+++ b/HTML/index.html
@@ -106,6 +106,12 @@
             <a href="fuentes_texto/tema_personalizado.html" class="list-group-item list-group-item-action list-group-item-primary">Tema personalizado</a>
         </div>
 
+        <h2>Efectos y animaciones</h2>
+
+        <div class="list-group mb-3 border border-danger">
+            <a href="animaciones/index.html" class="list-group-item list-group-item-action list-group-item-danger">Efectos interesantes (lluvia, nieve, niebla, matrix, etc.)</a>
+        </div>
+
         <h2>Miscelánea (fuentes de letra, sombras, cards, carrusel, etc.)</h2>
 
         <div class="list-group mb-3 border border-success">
