--- a/HTML/index.html
+++ b/HTML/index.html
@@ -110,6 +110,7 @@
 
         <div class="list-group mb-3 border border-danger">
             <a href="animaciones/index.html" class="list-group-item list-group-item-action list-group-item-danger">Efectos interesantes (lluvia, nieve, niebla, matrix, etc.)</a>
+            <a href="animate_css/index.html" class="list-group-item list-group-item-action list-group-item-danger">Librería Animate.css</a>
         </div>
 
         <h2>Miscelánea (fuentes de letra, sombras, cards, carrusel, etc.)</h2>
