Especificando delay en animate.css

--- a/HTML/animate_css/index.html
+++ b/HTML/animate_css/index.html
@@ -9,10 +9,6 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> 
-
-    <script>
-        document.documentElement.style.setProperty('--animate-duration', '1.5s');
-    </script>
 </head>
 
 <body data-bs-theme="dark">
@@ -20,51 +16,51 @@
         <h1>Animate.css</h1>
         <h2 class="mb-4">(Más información en <a href="https://animate.style/">animate.style</a>)</h2>
 
-        <div class="alert alert-warning alert-dismissible fade show animate__animated animate__bounce" role="alert">
+        <div class="alert alert-warning alert-dismissible fade show animate__animated animate__bounce animate__delay-2s" role="alert">
             A simple primary alert—check it out!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-        <div class="alert alert-secondary alert-dismissible fade show show animate__animated animate__flash" role="alert">
+        <div class="alert alert-secondary alert-dismissible fade show show animate__animated animate__flash animate__delay-3s" role="alert">
             A simple secondary alert—check it out!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-        <div class="alert alert-success alert-dismissible fade show animate__animated animate__pulse" role="alert">
+        <div class="alert alert-success alert-dismissible fade show animate__animated animate__pulse animate__delay-4s" role="alert">
             A simple success alert—check it out!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-        <div class="alert alert-danger alert-dismissible fade show animate__animated animate__rubberBand" role="alert">
+        <div class="alert alert-danger alert-dismissible fade show animate__animated animate__rubberBand animate__delay-5s" role="alert">
             A simple danger alert—check it out!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-        <div class="alert alert-warning alert-dismissible fade show animate__animated animate__shakeX" role="alert">
+        <div class="alert alert-warning alert-dismissible fade show animate__animated animate__shakeX animate__delay-2s" role="alert">
             A simple warning alert—check it out!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-        <div class="alert alert-info alert-dismissible fade show animate__animated animate__shakeY" role="alert">
+        <div class="alert alert-info alert-dismissible fade show animate__animated animate__shakeY animate__delay-3s" role="alert">
             A simple info alert—check it out!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-        <div class="alert alert-light alert-dismissible fade show animate__animated animate__headShake" role="alert">
+        <div class="alert alert-light alert-dismissible fade show animate__animated animate__headShake animate__delay-4s" role="alert">
             A simple light alert—check it out!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-        <div class="alert alert-dark alert-dismissible fade show animate__animated animate__swing" role="alert">
+        <div class="alert alert-dark alert-dismissible fade show animate__animated animate__swing animate__delay-5s" role="alert">
             A simple dark alert—check it out!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-        <div class="alert alert-warning alert-dismissible fade show animate__animated animate__tada" role="alert">
+        <div class="alert alert-warning alert-dismissible fade show animate__animated animate__tada animate__delay-2s" role="alert">
             A simple primary alert—check it out!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>        
-        <div class="alert alert-secondary alert-dismissible fade show show animate__animated animate__wobble" role="alert">
+        <div class="alert alert-secondary alert-dismissible fade show show animate__animated animate__wobble animate__delay-3s" role="alert">
             A simple secondary alert—check it out!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-        <div class="alert alert-success alert-dismissible fade show animate__animated animate__jello" role="alert">
+        <div class="alert alert-success alert-dismissible fade show animate__animated animate__jello animate__delay-4s" role="alert">
             A simple success alert—check it out!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-        <div class="alert alert-warning alert-dismissible fade show animate__animated animate__heartBeat" role="alert">
+        <div class="alert alert-warning alert-dismissible fade show animate__animated animate__heartBeat animate__delay-5s" role="alert">
             A simple primary alert—check it out!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>   
