--- a/HTML/index.html
+++ b/HTML/index.html
@@ -77,6 +77,7 @@
             <a href="formularios/reserva_cita.html" class="list-group-item list-group-item-action list-group-item-info">Reserva de cita</a>
             <a href="formularios/solicitud_oferta_laboral.html" class="list-group-item list-group-item-action list-group-item-info">Solicitud de oferta laboral (con Bootstrap)</a>
             <a href="formularios/google.html" class="list-group-item list-group-item-action list-group-item-info">Página de inicio de Google</a>
+            <a href="animate_css/login.html" class="list-group-item list-group-item-action list-group-item-info">Pantalla de login con Bootstrap y Animate.css</a>
         </div>
 
         <h2>Tablas</h2>
