--- a/JavaScript/9.Fetch/1.fetch productos.html
+++ b/JavaScript/9.Fetch/1.fetch productos.html
@@ -21,11 +21,36 @@
           img {
             height: 30px;
           }
+
+          .delete {
+            background-color: red;
+            color: white;
+            border: 0;
+            border-radius: 5px;
+            cursor: pointer;
+
+            &:active {
+              background-color: white;
+              color: red;
+            }
+          }
         }
+      }
+
+      #imgPreview {
+        max-width: 100px;
       }
     </style>
   </head>
   <body>
+    <form id="formProducto">
+      <p><input type="text" name="description" placeholder="Descripcion" required></p>
+      <p><input type="number" name="price" placeholder="Precio" required></p>
+      <p>Foto: <input type="file" name="image" required></p>
+      <p><img id="imgPreview" src=""></p> <!-- Para previsualizar la imagen seleccionada -->
+      <button type="submit">Añadir</button>
+    </form>
+
     <table id="productsTable">
       <thead>
         <tr>
@@ -33,6 +58,7 @@
           <th>Imagen</th>
           <th>Descripción</th>
           <th>Precio</th>
+          <th></th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -44,6 +70,7 @@
         <td><img src="" alt="" /></td>
         <td></td>
         <td></td>
+        <td><button class="delete">X</button></td>
       </tr>
     </template>
   </body>
